# potery_fastapi

./: Readme.md  pyproject.toml
src/: .env  main.py
src/api/app/routers/: router.py
src/api/core/: config.py
